# Congressional-Hackathon-2025

apps/congressional-hearings/: HEARING_SYNC_README.md  package.json  pnpm-lock.yaml  vercel.json
apps/congressional-hearings/app/: globals.css  page.tsx
apps/congressional-hearings/components/: condensed-filter-bar.tsx  enhanced-filter-panel.tsx  enhanced-transcript-viewer.tsx  expandable-transcript-segment.tsx  labeled-transcript-viewer.tsx  navigation.tsx  transcript-filter-panel.tsx
apps/congressional-hearings/lib/: openai-service.ts  prep-sheet-service.ts  supabase.ts
apps/congressional-hearings/scripts/: README.md  add-ai-fields.ts  add-ai-summaries.sql  add-labeled-hearing.ts  check-gao-table.ts  convert-recent-hearings.ts  convert-single-hearing.ts  create-hearings-table.sql  create-prep-sheets-table.sql  create-prep-sheets-table.ts  generate-ai-summaries.ts  (+17 more)
gao_reports/: GAO-08-587T.md  gao-25-107121.md  gao-25-107130.md  gao-25-107379.md  gao-25-107427.md  gao-25-107437.md  gao-25-107445.md  gao-25-107561.md  gao-25-107574.md  gao-25-107611.md  gao-25-107622.md  gao-25-107771.md  gao-25-108463.md  gao-25-108466.md  gao-25-108519.md  gao-25-108536.md  gao-25-108539.md  gao-25-108720.md  gao-25-108721.md  gao-25-108739.md
transcript-generation/: assemblyai_diarization.py  committee-membership-current.json  congress_scraper.py  example_usage.py  fetch_committee_members.py  pyproject.toml  resolve_speakers_cli.py  rewrite_transcript_entities.py  speaker_mapping_v2.json  speaker_resolver.py
transcript-generation/.cursor/rules/: dotenv.mdc  uv.mdc
(+26 files in other folders)
